--- a/public/byorns.css
+++ b/public/byorns.css
@@ -22,11 +22,6 @@ table tr th, table tr td, span {
    color: #CCCCCC;
 }
 
-.content{
- background-color: #333333;
-}
-
-
 /*All things fonts*/
 h1{
    color: #CCCCCC;
@@ -46,14 +41,15 @@ p{
 
 .content{
    padding-top:  50px;
+   background-color: #333333;
 }
 
-.myimage{
-    border-radius: 50%;
-    width: 40%;
-    height: 40%;
-    margin-left:30%;
+.more-verticle-space{
+    padding-bottom: 20%;
+}
 
+.margin-left-15{
+  padding-left: 15px;
 }
 
 .myinfo{
